--- a/helloWorld/kustomization.yaml
+++ b/helloWorld/kustomization.yaml
@@ -2,11 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ./bin
-
-patchesJson6902:
+  - ./binpatchesJson6902:
   - target:
-      version: v1
+        version: v1
       kind: Deployment
       name: testargo
     patch: |-
