--- a/helloWorld/kustomization.yaml
+++ b/helloWorld/kustomization.yaml
@@ -2,7 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ./binpatchesJson6902:
+  - ./bin
+  
+  patchesJson6902:
   - target:
         version: v1
       kind: Deployment
